@@ -181,6 +181,9 @@ parameter will be added in the response.
 Set the directory index file.
 If not specified, it defaults to
 .Pa index.gmi
+.It Ic auto Ic index Ar bool
+If no index file is found, automatically generate a directory listing.
+It's disabled by default.
 .It Ic location Pa path Brq ...
 Specify server configuration rules for a specific location.
 The
