@@ -19,9 +19,25 @@ server "it.example.com" {
 	key  "/path/to/key.pem"
 	root "/var/gemini/example.com"
 
-        # enable CGI scripts in /cgi-bin/
+	# enable CGI scripts in /cgi-bin/
 	cgi  "/cgi-bin/"
 
-        # optional
-        lang "it"
+	# optional
+	lang "it"
+}
+
+# a server block with a location
+server "foo.com" {
+	cert "..."
+	key  "..."
+	root "..."
+
+	location "/it/" {
+		lang "it"
+	}
+
+	location "/files" {
+		lang "en"
+		auto index on
+	}
 }
